--- a/SE Midterm Practical/SE Midterm Practical.vcxproj
+++ b/SE Midterm Practical/SE Midterm Practical.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="QuestionBank.cpp" />
     <ClCompile Include="SE Midterm Practical.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="QuestionBank.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
